[project]
name = "npnet"
description = "A very barebones mostly-copypaste implementation of [a/https://github.com/xie-lab-ml/Golden-Noise-for-Diffusion-Models](https://github.com/xie-lab-ml/Golden-Noise-for-Diffusion-Models)"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/asagi4/ComfyUI-NPNet"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-NPNet"
Icon = ""
